syntax = "proto3";
package ms2db;
import "common.proto";

message LoginRequest
{
  string account = 1;
  string password = 2;
}

message LoginResponse
{
	ClientError error = 1;
}